--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
@@ -43,4 +50,3 @@
     ]
   }
 }
- 
