--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^6.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
@@ -15,6 +16,7 @@
     "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
